# menteedb

./: .gitignore  ENCRYPTION_GUIDE.md  QUERY_GUIDE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
menteedb/: __init__.py  core.py  embeddings.py  file_handler.py
menteedb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
